fixed overflow

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -18,6 +18,7 @@
   left: 0%;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 .hero_bg video {
   height: 100%;
